css/style.css
/*
 * Author: Adrien P.
 */

html {
    scroll-behavior: smooth;
}

body {
    display: flex;
    flex-direction: column;
    font-family: 'Montserrat', sans-serif;
}

body, html {
    height: 100%;
    margin: 0;
    padding: 0;
}

nav {
    background: white;
    border-bottom: 2px transparent;
    padding: 10px 20px;
    position: sticky;
    top: 0;
    z-index: 1000;
}

h1, p {
    text-align: center;
}

footer {
    align-items: center;
    background: white;
    bottom: 0;    
    display: flex;
    flex-direction: row;
    font-style: italic;
    font-weight: light;
    justify-content: center;
    padding: 10px 20px;
    position: sticky;
    text-align: center;    
}

.nav-links {
    display: flex;
    flex-direction: row;
    gap: 30px;
    justify-content: center;
    list-style: none;
    margin: 0;    
    padding: 0;
}

.scroll-container {
    flex: 1;
    margin: 0;
    overflow-y: scroll;
    scroll-snap-type: y mandatory;
}

.section {
    scroll-snap-align: start;  
    height: 100vh;       
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 0 20px;
    box-sizing: border-box;
}

.hero {
    background: linear-gradient(to bottom, #f0f0f0, white);
    color: black;
    text-align: center;
}

.about {
    line-height: 1.6;
    max-width: 900px;    
    margin: 0 auto;
    text-align: center;
    width: 60%;
}

.contact {
    background: linear-gradient(to bottom, white, #f0f0f0);
}

.contact-link {
    display: flex;
    flex-direction: row;
    gap: 30px;
    padding: 50px;
    margin: 0;
    justify-content: center;
}

.skills-desc {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 30px;
    list-style: none;
    padding: 0;
    margin: 0;
    justify-content: center;
}

.skills-list {
    width: 100%;
    display: flex;
    justify-content: center;
}

.skills-imgs {
    height: 90px;
    width: auto;
}

.contact-link-cont {
    width: 100%;
    display: flex;
    justify-content: center;
}

.nav-links a {
    color: black;
    font-weight: bold;
    font-size: 18px;
    text-decoration: none;
}

.hero p {
    font-size: 17.5px;
}

.about p {
    font-size: 20px;
    overflow-wrap: normal;
    word-wrap: normal;    
}

.projects-desc li {
    list-style: none;
    text-align: center;
    padding-bottom: 15px;
    font-size: 17.5px;
}

.skills-desc li {
    width: calc(25% - 30px);
    display: flex;
    justify-content: center;
}

.nav-links a:hover {
    color: rgb(36, 36, 255);
}

h2 a:hover {
    color: rgb(36, 36, 255);
}

.contact-link a {
    text-decoration: none;
}

